--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+autopep8==1.4.4
 joblib==0.13.2
 nltk==3.4.1
 numpy==1.16.3
 pkg-resources==0.0.0
+pycodestyle==2.5.0
 python-dateutil==2.8.0
 pytz==2019.1
 scikit-learn==0.21.1
