--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 autopep8==1.4.4
+cycler==0.10.0
 joblib==0.13.2
+kiwisolver==1.1.0
+matplotlib==3.1.1
 nltk==3.4.1
 numpy==1.16.3
 pkg-resources==0.0.0
 pycodestyle==2.5.0
+pyparsing==2.4.0
 python-dateutil==2.8.0
 pytz==2019.1
 scikit-learn==0.21.1
